--- a/.gitattributes
+++ b/.gitattributes
@@ -16,5 +16,4 @@
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
 
-*.pas linguist-detectable=true
-*.html linguist-detectable=false
+*.htm linguist-detectable=false
